--- a/static/css/app.css
+++ b/static/css/app.css
@@ -8,3 +8,48 @@ body {
   max-width: 960px;
   margin: 0 auto;
 }
+
+.Career_Objective{
+  font-style: italic;
+
+}
+
+#Picture{
+  float: right;
+  height: 220;
+  overflow:auto;
+  position: relative;
+  -ms-transform: rotate(300deg);  
+    -webkit-transform: rotate(-7deg); 
+    transform: rotate(-7deg)
+  -webkit-compon;
+
+}
+
+h1{
+ border-bottom: solid;
+ position: relative;
+ overflow: auto;
+}
+
+ #Education_Category, #Skills_Category, #Experience_Category, #Hobbies_Category{
+ 
+  float:left;
+  margin-right: 50px;
+  height: 150px;
+  width: 100px;
+  border-right:solid;
+  font-size: 20px;
+  position: relative;
+  overflow: auto;
+  padding-right: 20px;
+
+
+}
+
+.Education, .Skills, .Experience, .Hobbies {
+  clear:both;
+  overflow: auto;
+
+}
+
